src/styles/_overrides.scss
h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6,
.entry-title a {
  color: #222;
}

.site-branding img {
  height: 72px;
  padding: 20px 0;
}

.header .container-content {
  position: relative;
}

.header-right .menu > li.menu-item:last-child {
  padding-right: 0;
}

.menu-toggle label {
  border: 0;

  &:hover {    
    background-color: rgba(125, 125, 125, 0.1);
  }
}

.button,
button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
  line-height: 2.25;
  padding: 0 $size-element-spacing-small;
}

.button.button-ghost {
  background-color: #fff;
  transition: box-shadow .25s ease-out;

  &:hover, &:focus {
    text-decoration: none;
    background-color: #fff;
    color: inherit;
    border-color: $color-default-border;
    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.08);
  }
}

ins {
  background: transparent;
}

.search-box .css-icon-search {
  top: 10px;
}

.header .css-icon-search {
    top: 16px;
}

.thumbnail-rounded img {
  border-radius: 50%;
}

.search-form input[type="submit"] {
  display: none;
}

.entry-meta {
  font-weight: normal;
  font-size: 12.96px;

  .dot {
    margin: 0 0.5em;
    color: #ccc;
  }

  .dot + span {
    margin-left: 0;
  }
}

.one-full {
  @include col-full-width();
}

.icon {
  display: inline-block;
  width: 1em;
  height: 1rem;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
}

.footer a.button {
  color: inherit;
}

p > *:first-child {
  margin-top: 0;
}

.h1,
h1 {
  //36px
  @include font-size(2.25 * $size-default-text);
}

.h2,
h2 {
  //28.8px
  @include font-size(1.8 * $size-default-text);
}

@include mobile {
  .h1,
  h1 {
    //30px
    @include font-size(1.875 * $size-default-text);
  }

  .h2,
  h2 {
    //24px
    @include font-size(1.625 * $size-default-text);
  }
  
  .h3,
  h3 {
    //20px
    @include font-size(1.25 * $size-default-text);
  }
}


.sub-header {
  .entry-title {
    margin-bottom: 0;
  }
  .entry-meta {
    font-size: 1rem;
    margin-top: 1.5rem;
  }
}

.entry-content-marginfix > *:first-child {
  margin-top: 0;
}

